--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,9 @@
     <div class="jumbotron">
         <h1 class="display-4">Dolt</h1>
         <p class="lead">Helping multi-taskers do more with less.</p>
-        <a href="/login"><img src="https://api.slack.com/img/sign_in_with_slack.png" /></a>
+        <a href="/login"><img alt="Sign in with Slack" height="40" width="172"
+                src="https://platform.slack-edge.com/img/sign_in_with_slack.png"
+                srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x" /></a>
     </div>
 </div>
 
