--- a/templates/login.html
+++ b/templates/login.html
@@ -3,15 +3,12 @@
 {% block title %} Dolt - Home {% endblock %}
 
 {% block content %}
-<div class="jumbotron jumbotron-fluid jumbotron-center">
-    <div class="container text-center">
-        <h1 class="display-4">Dolt</h1>
-        <p class="lead">Helping multi-taskers do more with less.</p>
-        <a href="/login"><img alt="Sign in with Slack" height="40" width="172"
-                src="https://platform.slack-edge.com/img/sign_in_with_slack.png"
-                srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x" /></a>
-    </div>
-
+<div class="container text-center my-5 py-5">
+    <h1 class="display-4">Dolt</h1>
+    <p class="lead">Helping multi-taskers do more with less.</p>
+    <a href="/login"><img alt="Sign in with Slack" height="40" width="172"
+            src="https://platform.slack-edge.com/img/sign_in_with_slack.png"
+            srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x" /></a>
 </div>
 
 {% endblock %}
