--- a/templates/home.html
+++ b/templates/home.html
@@ -5,11 +5,13 @@
 {% block content %}
 <div class="container-fluid">
     <div class="row">
-        <div class="col-4 col-md-2" id="sidebar">
+        <div class="col-4 col-md-2 p-0" id="sidebar">
             {% include 'components/sidebar.html' %}
         </div>
         <div class="col-8 col-md-10" id="main-dashboard">
             {% include 'components/new_task.html' %}
+            {% include 'components/list_tasks.html' %}
+            {% include 'components/add_group.html' %}
         </div>
     </div>
 </div>
