--- a/templates/home.html
+++ b/templates/home.html
@@ -9,9 +9,9 @@
             {% include 'components/sidebar.html' %}
         </div>
         <div class="col-8 col-md-10" id="main-dashboard">
-            {% include 'components/new_task.html' %}
-            {% include 'components/list_tasks.html' %}
-            {% include 'components/add_group.html' %}
+            {% include 'components/tasks/new_task.html' %}
+            {% include 'components/tasks/list_tasks.html' %}
+            {% include 'components/groups/add_group.html' %}
         </div>
     </div>
 </div>
