--- a/templates/components/groups/add_group.html
+++ b/templates/components/groups/add_group.html
@@ -7,7 +7,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form>
+            <form id="add-group-form">
                 <div class="modal-body">
                     <div class="form-group">
                         <input type="text" class="form-control" id="new-group-name" placeholder="Group name" required>
