finishing the final touches of the user flow

--- a/templates/components/groups/add_group.html
+++ b/templates/components/groups/add_group.html
@@ -10,7 +10,8 @@
             <form id="add-group-form">
                 <div class="modal-body">
                     <div class="form-group">
-                        <input type="text" class="form-control" id="new-group-name" placeholder="Group name" required>
+                        <input type="text" class="form-control" id="new-group-name" placeholder="Group name" required
+                            maxlength="50" minlength="3">
                     </div>
                 </div>
                 <div class="modal-footer">
