--- a/static/style.css
+++ b/static/style.css
@@ -5,8 +5,13 @@ body {
 
 #sidebar {
     height: 100vh;
-    background-color: lightblue;
+    background-color: #9CC1E7;
     position: fixed; 
+    color: black;
+}
+
+#sidebar a, .btn-link {
+    color: #343A40;
 }
 
 #app {
@@ -30,6 +35,7 @@ body {
 .sidebar-headings {
     padding-top: 1.5rem;
     padding-left: 1rem;
+    font-style: italic;
 }
 
 #new-task-fields {
@@ -42,7 +48,7 @@ body {
 }
 
 .active {
-    background-color: lightyellow;
+    background-color: #BDD7EF;
 }
 
 .avatar-img {
@@ -62,8 +68,25 @@ body {
 .task:hover {
     left: 10px;
     animation: slide 200ms ease;
+    background-color: #EFF5FB;
 }
 
+.dropdown-item {
+    cursor: pointer;
+}
+
+.btn-link {
+    padding-left: 1rem;
+}
+
+.card a {
+    text-decoration: none;
+    color: black;
+}
+
+.star {
+    color: #F5CC00;
+}
 
 /* Move tasks on hover */
 @keyframes slide {
