--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
     <!-- Google Fonts: Poppins -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
@@ -18,7 +21,7 @@
 
     <!-- style.css -->
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <title>{% block title %}{% endblock %}</title>
+    <title>Dolt</title>
 </head>
 
 <body>
@@ -56,8 +59,8 @@
     </nav>
     <main class="container-fluid" id="app">
         {% for category, msg in get_flashed_messages(with_categories=True) %}
-        <div class="container">
-            <div class="alert alert-{{category}}">{{ msg }}</div>
+        <div class="container-fluid px-0">
+            <div class="alert alert-{{category}} mb-0" role="alert">{{ msg }}</div>
         </div>
 
         {% endfor %}
