--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -14,6 +14,13 @@
         {% endif %}
         <a href="/tasks/important" class="nav-link">Important</a>
     </li>
+    {% if view == 'completed' %}
+    <li class="nav-item views active">
+        {% else %}
+    <li class="nav-item views">
+        {% endif %}
+        <a href="/tasks/completed" class="nav-link">Completed</a>
+    </li>
 </ul>
 <p class="h6 sidebar-headings">Due</p>
 <ul class="nav flex-column">
@@ -40,31 +47,4 @@
     </li>
 </ul>
 <p class="h6 sidebar-headings">Groups</p>
-
-<ul class="nav flex-column">
-    {% if user.groups %}
-    {% for group in user.groups %}
-    {% if view == group.id %}
-    <li class="nav-item groups active">
-        {% else %}
-    <li class="nav-item groups">
-        {% endif %}
-        <div class="row">
-            <div class="col-9 pr-0 mr-2">
-                <a href="/groups/{{ group.id }}" class="nav-link pr-0">{{ group.name }}</a>
-            </div>
-            <div class="col-2 px-0 text-right d-flex align-items-center">
-                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-three-dots" fill="currentColor"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                        d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z" />
-                </svg>
-            </div>
-        </div>
-    </li>
-    {% endfor %}
-    {% endif %}
-    <li class="nav-item groups">
-        <a class="nav-link" id="create-group" data-toggle="modal" data-target="#new-group-modal">Add group</a>
-    </li>
-</ul>
+{% include 'components/groups/list_groups.html' %}
