slash commands set up for viewing all tasks and groups

--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -5,7 +5,7 @@
         {% else %}
     <li class="nav-item views">
         {% endif %}
-        <a href="/tasks" class="nav-link">All tasks</a>
+        <a href="/tasks" class="nav-link">Open tasks</a>
     </li>
     {% if view == 'important' %}
     <li class="nav-item views active">
