--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Docs</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav">
                     {% if user %}
