--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,8 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Docs</a>
+                        <a class="nav-link"
+                            href="https://github.com/christopherklint97/Dolt/blob/main/docs/docs.md">Docs</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
