--- a/templates/components/groups/add_group.html
+++ b/templates/components/groups/add_group.html
@@ -1,24 +1,44 @@
-<div class="modal fade" id="new-group-modal" tabindex="-1" aria-labelledby="new-group-modal" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="new-group-modal-title">Add group</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <form id="add-group-form">
-                <div class="modal-body">
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="new-group-name" placeholder="Group name" required
-                            maxlength="50" minlength="3">
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Add</button>
-                </div>
-            </form>
+<div
+  class="modal fade"
+  id="new-group-modal"
+  tabindex="-1"
+  aria-labelledby="new-group-modal"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="new-group-modal-title">Add group</h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form id="add-group-form">
+        <div class="modal-body">
+          <div class="form-group">
+            <input
+              type="text"
+              class="form-control"
+              id="new-group-name"
+              placeholder="Group name"
+              required
+              maxlength="50"
+              minlength="3"
+            />
+          </div>
         </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">
+            Close
+          </button>
+          <button type="submit" class="btn btn-primary">Add</button>
+        </div>
+      </form>
     </div>
+  </div>
 </div>
