--- a/templates/components/tasks/edit_task_fields.html
+++ b/templates/components/tasks/edit_task_fields.html
@@ -1,65 +1,105 @@
 <div class="mb-4" id="edit-task-fields">
-    <div class="form-group">
-        <textarea name="description" id="edit-task-description" rows="5" placeholder="Describe what the task is..."
-            class="form-control">{{ task.description }}</textarea>
-    </div>
-    <div class="row">
-        <div class="col-12 col-md-4 mb-3">
-            <div class="input-group input-group-sm">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">
-                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-calendar-plus-fill"
-                            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4V.5zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zM8.5 8.5a.5.5 0 0 0-1 0V10H6a.5.5 0 0 0 0 1h1.5v1.5a.5.5 0 0 0 1 0V11H10a.5.5 0 0 0 0-1H8.5V8.5z" />
-                        </svg>
-                    </span>
-                </div>
-                <input type="text" id="datepicker" class="form-control" value="{{ task.due }}" name="date">
-            </div>
+  <div class="form-group">
+    <textarea
+      name="description"
+      id="edit-task-description"
+      rows="5"
+      placeholder="Describe what the task is..."
+      class="form-control"
+    >
+{{ task.description }}</textarea
+    >
+  </div>
+  <div class="row">
+    <div class="col-12 col-md-4 mb-3">
+      <div class="input-group input-group-sm">
+        <div class="input-group-prepend">
+          <span class="input-group-text">
+            <svg
+              width="1em"
+              height="1em"
+              viewBox="0 0 16 16"
+              class="bi bi-calendar-plus-fill"
+              fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4V.5zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zM8.5 8.5a.5.5 0 0 0-1 0V10H6a.5.5 0 0 0 0 1h1.5v1.5a.5.5 0 0 0 1 0V11H10a.5.5 0 0 0 0-1H8.5V8.5z"
+              />
+            </svg>
+          </span>
         </div>
-        <div class="col-12 col-md-8 mb-3">
-            <div class="input-group input-group-sm">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">
-                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-collection-fill"
-                            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6v7z" />
-                            <path fill-rule="evenodd"
-                                d="M2 3a.5.5 0 0 0 .5.5h11a.5.5 0 0 0 0-1h-11A.5.5 0 0 0 2 3zm2-2a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 0-1h-7A.5.5 0 0 0 4 1z" />
-                        </svg>
-                    </span>
-                </div>
-                <select class="custom-select" id="edit-task-group" name='group'>
-                    {% if task.group %}
-                    <option selected>{{ task.group.name }}</option>
-                    {% endif %}
-                    <option>None</option>
-                    {% if user.groups %}
-                    {% for group in user.groups|sort(attribute='name') %}
-                    {% if group.name != task.group.name %}
-                    <option>{{ group.name }}</option>
-                    {% endif %}
-                    {% endfor %}
-                    {% endif %}
-                </select>
-                <div class="input-group-append">
-                    <button class="btn btn-outline-primary" type="button" data-toggle="modal"
-                        data-target="#new-group-modal">Add group</button>
-                </div>
-            </div>
-        </div>
-
-
+        <input
+          type="text"
+          id="datepicker"
+          class="form-control"
+          value="{{ task.due }}"
+          name="date"
+        />
+      </div>
     </div>
-    <div class="row">
-        <div class="col text-right">
-            <button type="button" class="btn btn-outline-secondary btn-sm"
-                onclick="javascript:history.go(-1)">Cancel</button>
-            <a href="/api/tasks/{{ task.id }}/delete" class="btn btn-danger btn-sm">Delete</a>
-            <button type="submit" class="btn btn-success btn-sm">Save task</button>
+    <div class="col-12 col-md-8 mb-3">
+      <div class="input-group input-group-sm">
+        <div class="input-group-prepend">
+          <span class="input-group-text">
+            <svg
+              width="1em"
+              height="1em"
+              viewBox="0 0 16 16"
+              class="bi bi-collection-fill"
+              fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6v7z"
+              />
+              <path
+                fill-rule="evenodd"
+                d="M2 3a.5.5 0 0 0 .5.5h11a.5.5 0 0 0 0-1h-11A.5.5 0 0 0 2 3zm2-2a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 0-1h-7A.5.5 0 0 0 4 1z"
+              />
+            </svg>
+          </span>
         </div>
+        <select class="custom-select" id="edit-task-group" name="group">
+          {% if task.group %}
+          <option selected>{{ task.group.name }}</option>
+          {% endif %}
+          <option>None</option>
+          {% if user.groups %} 
+          {% for group in user.groups|sort(attribute='name') %} 
+          {% if group.name != task.group.name %}
+          <option>{{ group.name }}</option>
+          {% endif %} 
+          {% endfor %} 
+          {% endif %}
+        </select>
+        <div class="input-group-append">
+          <button
+            class="btn btn-outline-primary"
+            type="button"
+            data-toggle="modal"
+            data-target="#new-group-modal"
+          >
+            Add group
+          </button>
+        </div>
+      </div>
     </div>
-
+  </div>
+  <div class="row">
+    <div class="col text-right">
+      <button
+        type="button"
+        class="btn btn-outline-secondary btn-sm"
+        onclick="javascript:history.go(-1)"
+      >
+        Cancel
+      </button>
+      <a href="/api/tasks/{{ task.id }}/delete" class="btn btn-danger btn-sm"
+        >Delete</a
+      >
+      <button type="submit" class="btn btn-success btn-sm">Save task</button>
+    </div>
+  </div>
 </div>
