--- a/templates/components/tasks/new_task.html
+++ b/templates/components/tasks/new_task.html
@@ -1,8 +1,13 @@
 <form id="new-task-form">
-    <div class="form-group">
-        <input type="text" name="title" id="new-task-title" placeholder="New task"
-            class="form-control border-top-0 border-right-0 border-left-0" required>
-    </div>
-    {% include 'components/tasks/new_task_fields.html' %}
-
+  <div class="form-group">
+    <input
+      type="text"
+      name="title"
+      id="new-task-title"
+      placeholder="New task"
+      class="form-control border-top-0 border-right-0 border-left-0"
+      required
+    />
+  </div>
+  {% include 'components/tasks/new_task_fields.html' %}
 </form>
