add to slack button and renaming of files

--- a/templates/login.html
+++ b/templates/login.html
@@ -3,16 +3,34 @@
   <div class="row d-flex justify-content-center">
     <div class="col py-5">
       <h1 class="display-4">Dolt</h1>
-      <p class="lead">The simple to-do with Slack integration.</p>
+      <p class="lead">The task manager with Slack integration</p>
       <a href="/login"
         ><img
           alt="Sign in with Slack"
+          class="mb-5"
           height="40"
           width="172"
           src="https://platform.slack-edge.com/img/sign_in_with_slack.png"
           srcset="
             https://platform.slack-edge.com/img/sign_in_with_slack.png    1x,
             https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x
+          "
+      /></a>
+      <h2 class="mt-5">Unlock the power of slash commands</h2>
+      <p>
+        To take full advantage of the Slack integration, add Dolt to your Slack
+        workspace
+      </p>
+      <a
+        href="https://slack.com/oauth/v2/authorize?client_id=1466440291111.1505032481296&scope=app_mentions:read,chat:write,commands,im:read,im:write,incoming-webhook,reminders:read,reminders:write,users:read,channels:read&user_scope=channels:read,chat:write,im:read,im:write,reminders:read,reminders:write,users:read"
+        ><img
+          alt="Add to Slack"
+          height="40"
+          width="139"
+          src="https://platform.slack-edge.com/img/add_to_slack.png"
+          srcset="
+            https://platform.slack-edge.com/img/add_to_slack.png    1x,
+            https://platform.slack-edge.com/img/add_to_slack@2x.png 2x
           "
       /></a>
     </div>
@@ -24,7 +42,9 @@
           alt=""
         />
         <figcaption class="figure-caption text-right">
-          <a href="http://www.freepik.com">Designed by coolvector / Freepik</a>
+          <a href="http://www.freepik.com" id="shoutout"
+            >Designed by coolvector / Freepik</a
+          >
         </figcaption>
       </figure>
     </div>
