integrating the add to slack button

--- a/templates/login.html
+++ b/templates/login.html
@@ -21,8 +21,7 @@
         To take full advantage of the Slack integration, add Dolt to your Slack
         workspace
       </p>
-      <a
-        href="https://slack.com/oauth/v2/authorize?client_id=1466440291111.1505032481296&scope=app_mentions:read,chat:write,commands,im:read,im:write,incoming-webhook,reminders:read,reminders:write,users:read,channels:read&user_scope=channels:read,chat:write,im:read,im:write,reminders:read,reminders:write,users:read"
+      <a href="slack/install"
         ><img
           alt="Add to Slack"
           height="40"
